part 3 of x + game boots up (still buggy though) - gui changes - register changes - geckolib 3.x -> 4.x